# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@local_config_cuda//cuda:build_defs.bzl", "if_cuda", "if_cuda_is_configured")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "buffer_assignment_proto",
    srcs = ["buffer_assignment.proto"],
)

cc_proto_library(
    name = "buffer_assignment_cc_proto",
    deps = [":buffer_assignment_proto"],
)

proto_library(
    name = "hlo_proto",
    srcs = ["hlo.proto"],
    deps = [
        ":metrics_proto",
        "//zkx:zkx_data_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

cc_proto_library(
    name = "hlo_cc_proto",
    deps = [":hlo_proto"],
)

proto_library(
    name = "metrics_proto",
    srcs = ["metrics.proto"],
)

cc_proto_library(
    name = "metrics_cc_proto",
    deps = [":metrics_proto"],
)

proto_library(
    name = "test_compilation_environment_proto",
    testonly = True,
    srcs = ["test_compilation_environment.proto"],
)

cc_proto_library(
    name = "test_compilation_environment_cc_proto",
    testonly = True,
    deps = [":test_compilation_environment_proto"],
)

zkx_cc_library(
    name = "cpu_plugin",
    deps = [
        "//zkx/service/cpu:cpu_compiler_registerer",
        "//zkx/service/cpu:cpu_transfer_manager",
        "//zkx/stream_executor/host:host_platform",
    ],
)

zkx_cc_library(
    name = "gpu_plugin_impl",
    deps =  # TODO(chokobole): Uncomment this. Dependency: if_gpu_is_configured
        # if_gpu_is_configured([
        if_cuda_is_configured([
            "//zkx/service/gpu:gpu_compiler",
            "//zkx/service/gpu:gpu_transfer_manager",
        ]) + if_cuda_is_configured([
            "//zkx/service/gpu:nvptx_compiler_registerer",
            "//zkx/stream_executor/cuda:cuda_platform",
        ]),
    # TODO(chokobole): Uncomment this. Dependency: if_rocm_is_configured
    # + if_rocm_is_configured([
    #     "//zkx/service/gpu:amdgpu_compiler_registerer",
    #     "//zkx/service/gpu:rocm_platform",
    # ]),
)

zkx_cc_library(
    name = "gpu_plugin_stub",
)

alias(
    name = "gpu_plugin_noncuda",
    # TODO(chokobole): Uncomment this. Dependency: if_libtpu
    # actual = if_libtpu("gpu_plugin_stub", "gpu_plugin_impl"),
    actual = "gpu_plugin_impl",
)

alias(
    name = "gpu_plugin",
    actual = if_cuda("gpu_plugin_impl", "gpu_plugin_noncuda"),
)

zkx_cc_library(
    name = "interpreter_plugin",
    deps = [
        "//zkx/backends/interpreter:compiler",
        "//zkx/backends/interpreter:interpreter_transfer_manager",
        "//zkx/backends/interpreter:platform",
    ],
)

zkx_cc_library(
    name = "backend",
    srcs = ["backend.cc"],
    hdrs = ["backend.h"],
    deps = [
        ":compiler",
        ":computation_placer",
        ":platform_util",
        ":stream_pool",
        ":transfer_manager",
        "//xla/tsl/platform:cpu_info",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:statusor",
        "//zkx:util",
        "//zkx/stream_executor",
        "//zkx/stream_executor:device_memory_allocator",
        "//zkx/stream_executor:platform",
        "//zkx/stream_executor:stream_executor_memory_allocator",
        "//zkx/stream_executor/host:host_platform_id",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
        "@eigen_archive//:eigen3",
    ],
)

zkx_cc_library(
    name = "buffer_assignment",
    srcs = ["buffer_assignment.cc"],
    hdrs = ["buffer_assignment.h"],
    deps = [
        ":buffer_assignment_cc_proto",
        ":hlo_buffer",
        ":hlo_value",
        ":logical_buffer",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:numbers",
        "//zkx:map_util",
        "//zkx/base:logging",
        "//zkx/hlo/analysis:hlo_alias_analysis",
        "//zkx/hlo/analysis:hlo_dataflow_analysis",
        "//zkx/hlo/analysis:hlo_ordering",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_op_metadata",
        "//zkx/service/memory_space_assignment",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "buffer_value",
    srcs = ["buffer_value.cc"],
    hdrs = ["buffer_value.h"],
    deps = [
        ":hlo_cc_proto",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
    ],
)

zkx_cc_library(
    name = "call_graph",
    srcs = ["call_graph.cc"],
    hdrs = ["call_graph.h"],
    deps = [
        "//zkx/base:logging",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "call_inliner",
    srcs = ["call_inliner.cc"],
    hdrs = ["call_inliner.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:side_effect_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:dfs_hlo_visitor_with_default",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/hlo/pass:hlo_pass_interface",
        "//zkx/hlo/transforms/simplifiers:hlo_dce",
        "//zkx/service:call_graph",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "compilation_stats",
    srcs = ["compilation_stats.cc"],
    hdrs = ["compilation_stats.h"],
    deps = [
        "//xla/tsl/platform:env",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
    ],
)

zkx_cc_library(
    name = "computation_layout",
    srcs = ["computation_layout.cc"],
    hdrs = ["computation_layout.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//zkx:shape_layout",
        "//zkx:shape_util",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "collective_ops_utils",
    srcs = ["collective_ops_utils.cc"],
    hdrs = ["collective_ops_utils.h"],
    deps = [
        ":computation_placer",
        ":global_device_id",
        ":pattern_matcher",
        "//xla/tsl/platform:statusor",
        "//zkx:executable_run_options",
        "//zkx:status_macros",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "compilation_environments",
    srcs = ["compilation_environments.cc"],
    hdrs = ["compilation_environments.h"],
    deps = [
        "//xla/tsl/platform:casts",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:zkx_cc_proto",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/debugging:leak_check",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "compiler",
    srcs = ["compiler.cc"],
    hdrs = ["compiler.h"],
    deps = [
        ":buffer_value",
        ":computation_placer",
        ":executable",
        ":hlo_cost_analysis",
        "//xla/tsl/platform:env",
        "//zkx:debug_options_flags",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_module_group",
        "//zkx/pjrt/distributed:key_value_store_interface",
        "//zkx/stream_executor",
        "//zkx/stream_executor:device_description",
        "//zkx/stream_executor:device_memory_allocator",
        "//zkx/stream_executor:platform",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/debugging:leak_check",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "compile_time_cap",
    hdrs = ["compile_time_cap.h"],
    deps = ["//zkx/hlo/ir:hlo"],
)

zkx_cc_library(
    name = "computation_placer",
    srcs = ["computation_placer.cc"],
    hdrs = ["computation_placer.h"],
    deps = [
        ":global_device_id",
        "//xla/tsl/platform:statusor",
        "//zkx:array2d",
        "//zkx:status_macros",
        "//zkx:zkx_data_cc_proto",
        "//zkx/stream_executor:platform",
        "//zkx/stream_executor/cuda:cuda_platform_id",
        "//zkx/stream_executor/host:host_platform_id",
        "//zkx/stream_executor/rocm:rocm_platform_id",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/debugging:leak_check",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "copy_insertion",
    srcs = ["copy_insertion.cc"],
    hdrs = ["copy_insertion.h"],
    deps = [
        ":compile_time_cap",
        ":dump",
        ":hlo_buffer",
        ":hlo_value",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx:frontend_attributes",
        "//zkx:map_util",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx/hlo/analysis:hlo_alias_analysis",
        "//zkx/hlo/analysis:hlo_dataflow_analysis",
        "//zkx/hlo/analysis:hlo_ordering",
        "//zkx/hlo/analysis:hlo_reachability",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/pass:hlo_pass_interface",
        "//zkx/hlo/transforms/simplifiers:hlo_dce",
        "//zkx/hlo/transforms/simplifiers:tuple_simplifier",
        "//zkx/service:call_graph",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "custom_call_status",
    srcs = [
        "custom_call_status.cc",
        "custom_call_status_internal.h",
    ],
    hdrs = ["custom_call_status.h"],
)

zkx_cc_library(
    name = "custom_call_target_registry",
    srcs = ["custom_call_target_registry.cc"],
    hdrs = ["custom_call_target_registry.h"],
    deps = ["@com_google_absl//absl/debugging:leak_check"],
)

zkx_cc_library(
    name = "dump",
    srcs = ["dump.cc"],
    hdrs = ["dump.h"],
    deps = [
        ":buffer_assignment",
        ":hlo_cc_proto",
        ":hlo_proto_util",
        "//xla/tsl/lib/strings:proto_serialization",
        "//xla/tsl/platform",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:path",
        "//zkx:debug_options_flags",
        "//zkx:util",
        "//zkx:zkx_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/service/llvm_ir:llvm_util",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_protobuf//:protobuf",
        "@com_googlesource_code_re2//:re2",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Transforms",
    ],
)

zkx_cc_library(
    name = "dynamic_dimension_inference",
    srcs = ["dynamic_dimension_inference.cc"],
    hdrs = ["dynamic_dimension_inference.h"],
    deps = [
        ":hlo_creation_utils",
        ":hlo_value",
        ":tuple_util",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:literal_util",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/analysis:hlo_dataflow_analysis",
        "//zkx/hlo/ir:dfs_hlo_visitor_with_default",
        "//zkx/hlo/ir:dynamic_parameter_binding",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "executable",
    srcs = ["executable.cc"],
    hdrs = ["executable.h"],
    deps = [
        ":buffer_assignment",
        ":maybe_owning_device_memory",
        ":service_executable_run_options",
        ":shaped_buffer",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "//zkx/stream_executor",
        "//zkx/stream_executor:device_memory_allocator",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "generic_transfer_manager",
    srcs = ["generic_transfer_manager.cc"],
    hdrs = ["generic_transfer_manager.h"],
    deps = [
        ":transfer_manager",
        "//xla/tsl/platform:casts",
        "//xla/tsl/platform:errors",
        "//zkx:primitive_util",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "global_device_id",
    srcs = ["global_device_id.cc"],
    hdrs = ["global_device_id.h"],
    deps = [
        "//xla/tsl/lib/gtl:int_type",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_buffer",
    srcs = ["hlo_buffer.cc"],
    hdrs = ["hlo_buffer.h"],
    deps = [
        ":buffer_value",
        ":hlo_value",
        "//zkx/base:logging",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "hlo_cost_analysis",
    hdrs = ["hlo_cost_analysis.h"],
    deps = ["//zkx:shape_util"],
)

zkx_cc_library(
    name = "hlo_creation_utils",
    srcs = ["hlo_creation_utils.cc"],
    hdrs = ["hlo_creation_utils.h"],
    deps = [
        ":hlo_cc_proto",
        ":hlo_module_config",
        ":shape_inference",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:comparison_util",
        "//zkx:literal_util",
        "//zkx:primitive_util",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_clone_context",
        "//zkx/hlo/ir:hlo_opcode",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_graph_dumper",
    srcs = ["hlo_graph_dumper.cc"],
    hdrs = ["hlo_graph_dumper.h"],
    deps = [
        ":pattern_matcher",
        "//xla/tsl/lib/gtl:map_util",
        "//xla/tsl/lib/io:zlib_compression_options",
        "//xla/tsl/lib/io:zlib_outputbuffer",
        "//xla/tsl/platform:base64",
        "//zkx:comparison_util",
        "//zkx:literal",
        "//zkx:shape_util",
        "//zkx:types",
        "//zkx:util",
        "//zkx:window_util",
        "//zkx:zkx_cc_proto",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
    alwayslink = 1,
)

zkx_cc_library(
    name = "hlo_module_config",
    srcs = ["hlo_module_config.cc"],
    hdrs = ["hlo_module_config.h"],
    deps = [
        ":computation_layout",
        ":computation_placer",
        ":sharding_config",
        "//zkx:debug_options_flags",
        "//zkx:shape_util",
        "//zkx:zkx_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_module_util",
    srcs = ["hlo_module_util.cc"],
    hdrs = ["hlo_module_util.h"],
    deps = [
        ":compiler",
        ":computation_layout",
        ":hlo_module_config",
        "//xla/tsl/platform:statusor",
        "//zkx:debug_options_flags",
        "//zkx:shape_util",
        "//zkx:zkx_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_proto_util",
    srcs = ["hlo_proto_util.cc"],
    hdrs = ["hlo_proto_util.h"],
    deps = [
        ":buffer_assignment",
        ":hlo_cc_proto",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "hlo_runner",
    srcs = ["hlo_runner.cc"],
    hdrs = ["hlo_runner.h"],
    deps = [
        ":backend",
        ":compiler",
        ":computation_layout",
        ":computation_placer",
        ":executable",
        ":hlo_module_util",
        ":hlo_runner_interface",
        ":maybe_owning_device_memory",
        ":service_executable_run_options",
        ":shaped_buffer",
        ":transfer_manager",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:executable_run_options",
        "//zkx:literal",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/service/gpu:gpu_executable_run_options",
        "//zkx/stream_executor",
        "//zkx/stream_executor:device_description",
        "//zkx/stream_executor:device_memory",
        "//zkx/stream_executor:device_memory_allocator",
        "//zkx/stream_executor:platform",
        "//zkx/stream_executor:stream_executor_memory_allocator",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_runner_interface",
    srcs = ["hlo_runner_interface.cc"],
    hdrs = ["hlo_runner_interface.h"],
    deps = [
        ":hlo_module_config",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/parser:hlo_parser",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:die_if_null",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_runner_pjrt",
    srcs = ["hlo_runner_pjrt.cc"],
    hdrs = ["hlo_runner_pjrt.h"],
    deps = [
        ":computation_layout",
        ":computation_placer",
        ":hlo_module_util",
        ":hlo_runner_interface",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:literal_util",
        "//zkx:shape_layout",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/hlo/ir:hlo",
        "//zkx/pjrt:host_memory_spaces",
        "//zkx/pjrt:pjrt_client",
        "//zkx/pjrt:pjrt_common",
        "//zkx/pjrt:pjrt_compiler",
        "//zkx/pjrt:pjrt_executable",
        "//zkx/pjrt:pjrt_future",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:die_if_null",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_verifier",
    srcs = ["hlo_verifier.cc"],
    hdrs = ["hlo_verifier.h"],
    deps = [
        ":collective_ops_utils",
        ":hlo_module_config",
        ":shape_inference",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:comparison_util",
        "//zkx:permutation_util",
        "//zkx:primitive_util",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:dfs_hlo_visitor_with_default",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/pass:hlo_pass_interface",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "hlo_value",
    srcs = ["hlo_value.cc"],
    hdrs = ["hlo_value.h"],
    deps = [
        ":buffer_value",
        "//zkx:lazy",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "latency_hiding_scheduler",
    srcs = ["latency_hiding_scheduler.cc"],
    hdrs = ["latency_hiding_scheduler.h"],
    deps = [
        ":dump",
        ":hlo_buffer",
        ":hlo_cost_analysis",
        ":hlo_value",
        "//xla/tsl/platform:errors",
        "//zkx:debug_options_flags",
        "//zkx:map_util",
        "//zkx:shape_util",
        "//zkx:side_effect_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx:zkx_cc_proto",
        "//zkx/hlo/analysis:hlo_alias_analysis",
        "//zkx/hlo/analysis:hlo_reachability",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:ptr_vec",
        "//zkx/hlo/pass:hlo_pass_interface",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:vlog_is_on",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "legalize_scheduling_annotations",
    srcs = ["legalize_scheduling_annotations.cc"],
    hdrs = ["legalize_scheduling_annotations.h"],
    deps = [
        "//xla/tsl/platform:statusor",
        "//zkx:side_effect_util",
        "//zkx:util",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:ptr_vec",
        "//zkx/hlo/pass:hlo_pass_interface",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "llvm_compiler",
    srcs = ["llvm_compiler.cc"],
    hdrs = ["llvm_compiler.h"],
    deps = [
        ":compiler",
        "//xla/tsl/platform:statusor",
        "@com_google_absl//absl/log:check",
        "@llvm-project//llvm:Core",
    ],
)

zkx_cc_library(
    name = "lockable",
    hdrs = ["lockable.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "logical_buffer",
    srcs = ["logical_buffer.cc"],
    hdrs = ["logical_buffer.h"],
    deps = [
        ":buffer_value",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "mapped_ptr_container_sorter",
    hdrs = ["mapped_ptr_container_sorter.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "maybe_owning_device_memory",
    srcs = ["maybe_owning_device_memory.cc"],
    hdrs = ["maybe_owning_device_memory.h"],
    deps = [
        "//zkx/stream_executor:device_memory",
        "//zkx/stream_executor:device_memory_allocator",
    ],
)

zkx_cc_library(
    name = "name_uniquer",
    srcs = ["name_uniquer.cc"],
    hdrs = ["name_uniquer.h"],
    deps = [
        "//zkx:primitive_util",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "pattern_matcher",
    hdrs = ["pattern_matcher.h"],
    deps = [
        "//zkx:comparison_util",
        "//zkx:literal",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/parser:hlo_parser",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_absl//absl/utility",
    ],
)

zkx_cc_library(
    name = "phi_graph",
    srcs = ["phi_graph.cc"],
    hdrs = ["phi_graph.h"],
    deps = [
        ":hlo_value",
        "//zkx/base:logging",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "platform_util",
    srcs = ["platform_util.cc"],
    hdrs = ["platform_util.h"],
    deps = [
        ":compiler",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:debug_options_flags",
        "//zkx/stream_executor:platform",
        "//zkx/stream_executor:platform_manager",
        "//zkx/stream_executor/cuda:cuda_platform_id",
        "//zkx/stream_executor/host:host_platform_id",
        "//zkx/stream_executor/rocm:rocm_platform_id",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "profile_guided_latency_estimator",
    srcs = ["profile_guided_latency_estimator.cc"],
    hdrs = ["profile_guided_latency_estimator.h"],
    deps = [
        ":latency_hiding_scheduler",
        "//xla/tsl/profiler/protobuf:profiled_instructions_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/utils:hlo_query",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "rendezvous",
    srcs = ["rendezvous.cc"],
    hdrs = ["rendezvous.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "service_executable_run_options",
    hdrs = ["service_executable_run_options.h"],
    deps = [
        ":stream_pool",
        "//xla/tsl/platform:statusor",
        "//zkx:executable_run_options",
        "//zkx/stream_executor",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "shape_inference",
    srcs = ["shape_inference.cc"],
    hdrs = ["shape_inference.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//zkx:permutation_util",
        "//zkx:shape_util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "shaped_buffer",
    srcs = ["shaped_buffer.cc"],
    hdrs = ["shaped_buffer.h"],
    deps = [
        "//xla/tsl/platform:statusor",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx/stream_executor:device_memory",
        "//zkx/stream_executor:device_memory_allocator",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "sharding_config",
    srcs = ["sharding_config.cc"],
    hdrs = ["sharding_config.h"],
    deps = [
        "//zkx:zkx_cc_proto",
        "//zkx/hlo/ir:hlo_sharding",
    ],
)

zkx_cc_library(
    name = "slow_operation_alarm",
    srcs = ["slow_operation_alarm.cc"],
    hdrs = ["slow_operation_alarm.h"],
    deps = [
        "//xla/tsl/platform:env",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/debugging:leak_check",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
    ],
)

zkx_cc_library(
    name = "stream_pool",
    srcs = ["stream_pool.cc"],
    hdrs = ["stream_pool.h"],
    deps = [
        "//zkx/stream_executor",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "time_utils",
    hdrs = ["time_utils.h"],
)

zkx_cc_library(
    name = "transfer_manager",
    srcs = ["transfer_manager.cc"],
    hdrs = ["transfer_manager.h"],
    deps = [
        ":compiler",
        ":maybe_owning_device_memory",
        ":shaped_buffer",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/stream_executor",
        "//zkx/stream_executor:device_memory",
        "//zkx/stream_executor:platform",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "tuple_util",
    srcs = ["tuple_util.cc"],
    hdrs = ["tuple_util.h"],
    deps = [
        ":hlo_value",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "while_util",
    srcs = ["while_util.cc"],
    hdrs = ["while_util.h"],
    deps = [
        ":call_inliner",
        ":hlo_creation_utils",
        ":pattern_matcher",
        ":tuple_util",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:comparison_util",
        "//zkx:literal_util",
        "//zkx:shape_util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "zkx_debug_info_manager",
    srcs = ["zkx_debug_info_manager.cc"],
    hdrs = ["zkx_debug_info_manager.h"],
    deps = [
        ":hlo_cc_proto",
        ":hlo_proto_util",
        "//zkx/hlo/ir:hlo",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/base:no_destructor",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_unittest(
    name = "service_unittests",
    srcs = [
        "call_graph_unittest.cc",
        "call_inliner_unittest.cc",
        "compilation_environments_unittest.cc",
        "copy_insertion_unittest.cc",
        "custom_call_status_test_c_caller.c",
        "custom_call_status_test_c_caller.h",
        "custom_call_target_registry_unittest.cc",
        "dump_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "dynamic_dimension_inference_unittest.cc",
        "hlo_creation_utils_unittest.cc",
        "hlo_graph_dumper_unittest.cc",
        "hlo_module_config_unittest.cc",
        "hlo_proto_util_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "hlo_verifier_unittest.cc",
        "lockable_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "latency_hiding_scheduler_unittest.cc",
        "mapped_ptr_container_sorter_unittest.cc",
        "name_uniquer_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "pattern_matcher_unittest.cc",
        "phi_graph_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "profile_guided_latency_estimator_unittest.cc",
        "rendezvous_unittest.cc",
        "shape_inference_unittest.cc",
        "sharding_config_unittest.cc",
        "slow_operation_alarm_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: PlatformUtil::GetStreamExecutors
        # "shaped_buffer_unittest.cc",
        "stream_pool_unittest.cc",
        "while_util_unittest.cc",
        # TODO(chokobole): Add unittest. Dependency: HloTestBase
        # "zkx_debug_info_manager_unittest.cc",
    ],
    deps = [
        ":call_graph",
        ":call_inliner",
        ":compilation_environments",
        ":copy_insertion",
        ":cpu_plugin",
        ":custom_call_status",
        ":custom_call_target_registry",
        ":dump",
        ":hlo_creation_utils",
        ":hlo_graph_dumper",
        ":hlo_module_config",
        ":hlo_proto_util",
        ":lockable",
        ":mapped_ptr_container_sorter",
        ":name_uniquer",
        ":phi_graph",
        ":rendezvous",
        ":shape_inference",
        ":sharding_config",
        ":slow_operation_alarm",
        ":stream_pool",
        ":test_compilation_environment_cc_proto",
        ":while_util",
        "//xla/tsl/platform",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:path",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//xla/tsl/platform:test_util",
        "//zkx:array2d",
        "//zkx:comparison_util",
        "//zkx:literal_util",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/evaluator:hlo_evaluator",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/hlo/parser:hlo_parser",
        "//zkx/hlo/testlib:file_check",
        "//zkx/hlo/testlib:hlo_hardware_independent_test_base",
        "//zkx/hlo/testlib:pattern_matcher_gmock",
        "//zkx/hlo/testlib:verified_hlo_module",
        "//zkx/hlo/utils:hlo_matchers",
        "//zkx/hlo/utils:hlo_query",
        "//zkx/service:pattern_matcher",
        "//zkx/stream_executor:platform_manager",
        "//zkx/stream_executor/host:host_platform",
        "//zkx/tests:hlo_test_base",
        "//zkx/tests:literal_test_util",
        "//zkx/tests:test_utils",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
    ],
)
